--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "gh-pages": "^3.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-typing-effect": "^2.0.5",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
